--- a/public/index.html
+++ b/public/index.html
@@ -58,8 +58,10 @@
   
    <!-- List -->
    <div class="list bg-white px-2 py-4 rounded-md">
-    <h3>Expense List</h3>
-    <div class="list-container" id="list"></div>
+    <h3 class=" text-green-600 text-lg font-bold mb-2">Expense List</h3>
+    <div class="list-container" id="list">
+        <div class="sublist-content flex"></div>
+    </div>
 
    </div>
 </div>
