--- a/public/index.html
+++ b/public/index.html
@@ -39,8 +39,8 @@
                 <button class=" submit  bg-green-600 text-white p-3 rounded-sm" id="check-amount">Check Amount</button>
             </div>
         </div>
-    </div>
-    <!-- Output -->
+    </div>  
+    <!-- Output. -->
     <div class="output-container flex bg-green-600 justify-between text-white py-2 px-2 my-6 rounded-md">
         <div class=" flex flex-col items-center">
             <p class=" pb-2">Total Budget</p>
